// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Results displays items with pagination 1`] = `

<section class="bg-background overflow-y-hidden">
  <div class="grid-cols-[1fr_4fr_1fr] border-t lg:grid">
    <div class="border-background-secondary max-lg:hidden flex flex-col">
      <div class="h-[108px]">
      </div>
      <div class="relative h-[46px] border-y">
        <gui-cross
          top="true"
          right="true"
        >
        </gui-cross>
        <gui-cross
          bottom="true"
          right="true"
        >
        </gui-cross>
      </div>
      <div class="grow">
      </div>
      <div class="relative h-[46px] border-y">
        <gui-cross
          top="true"
          right="true"
        >
        </gui-cross>
        <gui-cross
          bottom="true"
          right="true"
        >
        </gui-cross>
      </div>
    </div>
    <gui-table
      variant="list"
      classname="border-x border-t-0"
    >
      <gui-table-caption>
        Showing
        <span class="mx-1.5 font-mono text-2xl tabular-nums">
          3
        </span>
        of
        <span class="mx-1.5 font-mono text-2xl tabular-nums">
          3
        </span>
        results
      </gui-table-caption>
      <gui-table-filter-list>
        <gui-table-filter-list-item>
          <gui-table-filter-list-button
            classname="capitalize"
            isactive="false"
            enablesorting="true"
            disabled="false"
          >
            <gui-list-icon>
            </gui-list-icon>
            alphabetical
          </gui-table-filter-list-button>
        </gui-table-filter-list-item>
        <gui-table-filter-list-item>
          <gui-table-filter-list-button
            classname="capitalize"
            isactive="false"
            enablesorting="true"
            disabled="false"
          >
            <gui-layers-icon>
            </gui-layers-icon>
            version
          </gui-table-filter-list-button>
        </gui-table-filter-list-item>
        <gui-table-filter-list-item>
          <gui-table-filter-list-button
            classname="capitalize"
            isactive="false"
            enablesorting="true"
            disabled="false"
          >
            <gui-send-to-back-icon>
            </gui-send-to-back-icon>
            dependency type
          </gui-table-filter-list-button>
        </gui-table-filter-list-item>
        <gui-table-filter-list-item>
          <gui-table-filter-list-button
            classname="capitalize"
            isactive="false"
            enablesorting="true"
            disabled="false"
          >
            <gui-gallery-vertical-end-icon>
            </gui-gallery-vertical-end-icon>
            dependents
          </gui-table-filter-list-button>
        </gui-table-filter-list-item>
        <gui-table-filter-list-item>
          <gui-table-filter-list-button
            classname="capitalize"
            isactive="false"
            enablesorting="true"
            disabled="false"
          >
            <gui-blocks-icon>
            </gui-blocks-icon>
            module type
          </gui-table-filter-list-button>
        </gui-table-filter-list-item>
      </gui-table-filter-list>
      <gui-table-body classname="min-h-[calc(100svh-64px-108px-46px-46px)]">
        <gui-table-row>
          <div
            data-testid="result-item"
            data-id="·npm·a@1.0.0"
          >
            a@1.0.0
          </div>
        </gui-table-row>
        <gui-table-row>
          <div
            data-testid="result-item"
            data-id="·npm·b@1.0.0"
          >
            b@1.0.0
          </div>
        </gui-table-row>
        <gui-table-row>
          <div
            data-testid="result-item"
            data-id="·npm·c@1.0.0"
          >
            c@1.0.0
          </div>
        </gui-table-row>
      </gui-table-body>
      <gui-table-footer>
        <gui-table-pagination-list classname="h-full grid-cols-12 lg:h-[45px] flex justify-between">
          <gui-table-pagination-list-item classname="max-lg:col-span-12">
            <gui-table-pagination-list-button
              as="previous"
              disabled="true"
            >
              Previous
            </gui-table-pagination-list-button>
          </gui-table-pagination-list-item>
          <gui-table-pagination-list-item>
            <gui-table-pagination-list-button
              as="number"
              active="true"
            >
              1
            </gui-table-pagination-list-button>
          </gui-table-pagination-list-item>
          <gui-table-pagination-list-item classname="max-lg:col-span-12">
            <gui-table-pagination-list-button
              as="next"
              disabled="true"
            >
              Next
            </gui-table-pagination-list-button>
          </gui-table-pagination-list-item>
        </gui-table-pagination-list>
      </gui-table-footer>
    </gui-table>
    <div class="border-background-secondary max-lg:hidden flex flex-col">
      <div class="h-[108px]">
      </div>
      <div class="relative h-[46px] border-y">
        <gui-cross
          top="true"
          left="true"
        >
        </gui-cross>
        <gui-cross
          bottom="true"
          left="true"
        >
        </gui-cross>
      </div>
      <div class="grow">
      </div>
      <div class="relative h-[46px] border-y">
        <gui-cross
          top="true"
          left="true"
        >
        </gui-cross>
        <gui-cross
          bottom="true"
          left="true"
        >
        </gui-cross>
      </div>
    </div>
  </div>
</section>

`;

exports[`Results displays many items triggering pagination 1`] = `

<section class="bg-background overflow-y-hidden">
  <div class="grid-cols-[1fr_4fr_1fr] border-t lg:grid">
    <div class="border-background-secondary max-lg:hidden flex flex-col">
      <div class="h-[108px]">
      </div>
      <div class="relative h-[46px] border-y">
        <gui-cross
          top="true"
          right="true"
        >
        </gui-cross>
        <gui-cross
          bottom="true"
          right="true"
        >
        </gui-cross>
      </div>
      <div class="grow">
      </div>
      <div class="relative h-[46px] border-y">
        <gui-cross
          top="true"
          right="true"
        >
        </gui-cross>
        <gui-cross
          bottom="true"
          right="true"
        >
        </gui-cross>
      </div>
    </div>
    <gui-table
      variant="list"
      classname="border-x border-t-0"
    >
      <gui-table-caption>
        Showing
        <span class="mx-1.5 font-mono text-2xl tabular-nums">
          10
        </span>
        of
        <span class="mx-1.5 font-mono text-2xl tabular-nums">
          50
        </span>
        results
      </gui-table-caption>
      <gui-table-filter-list>
        <gui-table-filter-list-item>
          <gui-table-filter-list-button
            classname="capitalize"
            isactive="false"
            enablesorting="true"
            disabled="false"
          >
            <gui-list-icon>
            </gui-list-icon>
            alphabetical
          </gui-table-filter-list-button>
        </gui-table-filter-list-item>
        <gui-table-filter-list-item>
          <gui-table-filter-list-button
            classname="capitalize"
            isactive="false"
            enablesorting="true"
            disabled="false"
          >
            <gui-layers-icon>
            </gui-layers-icon>
            version
          </gui-table-filter-list-button>
        </gui-table-filter-list-item>
        <gui-table-filter-list-item>
          <gui-table-filter-list-button
            classname="capitalize"
            isactive="false"
            enablesorting="true"
            disabled="false"
          >
            <gui-send-to-back-icon>
            </gui-send-to-back-icon>
            dependency type
          </gui-table-filter-list-button>
        </gui-table-filter-list-item>
        <gui-table-filter-list-item>
          <gui-table-filter-list-button
            classname="capitalize"
            isactive="false"
            enablesorting="true"
            disabled="false"
          >
            <gui-gallery-vertical-end-icon>
            </gui-gallery-vertical-end-icon>
            dependents
          </gui-table-filter-list-button>
        </gui-table-filter-list-item>
        <gui-table-filter-list-item>
          <gui-table-filter-list-button
            classname="capitalize"
            isactive="false"
            enablesorting="true"
            disabled="false"
          >
            <gui-blocks-icon>
            </gui-blocks-icon>
            module type
          </gui-table-filter-list-button>
        </gui-table-filter-list-item>
      </gui-table-filter-list>
      <gui-table-body classname="min-h-[calc(100svh-64px-108px-46px-46px)]">
        <gui-table-row>
          <div
            data-testid="result-item"
            data-id="·npm·package-0@1.0.0"
          >
            package-0@1.0.0
          </div>
        </gui-table-row>
        <gui-table-row>
          <div
            data-testid="result-item"
            data-id="·npm·package-1@1.0.0"
          >
            package-1@1.0.0
          </div>
        </gui-table-row>
        <gui-table-row>
          <div
            data-testid="result-item"
            data-id="·npm·package-2@1.0.0"
          >
            package-2@1.0.0
          </div>
        </gui-table-row>
        <gui-table-row>
          <div
            data-testid="result-item"
            data-id="·npm·package-3@1.0.0"
          >
            package-3@1.0.0
          </div>
        </gui-table-row>
        <gui-table-row>
          <div
            data-testid="result-item"
            data-id="·npm·package-4@1.0.0"
          >
            package-4@1.0.0
          </div>
        </gui-table-row>
        <gui-table-row>
          <div
            data-testid="result-item"
            data-id="·npm·package-5@1.0.0"
          >
            package-5@1.0.0
          </div>
        </gui-table-row>
        <gui-table-row>
          <div
            data-testid="result-item"
            data-id="·npm·package-6@1.0.0"
          >
            package-6@1.0.0
          </div>
        </gui-table-row>
        <gui-table-row>
          <div
            data-testid="result-item"
            data-id="·npm·package-7@1.0.0"
          >
            package-7@1.0.0
          </div>
        </gui-table-row>
        <gui-table-row>
          <div
            data-testid="result-item"
            data-id="·npm·package-8@1.0.0"
          >
            package-8@1.0.0
          </div>
        </gui-table-row>
        <gui-table-row>
          <div
            data-testid="result-item"
            data-id="·npm·package-9@1.0.0"
          >
            package-9@1.0.0
          </div>
        </gui-table-row>
      </gui-table-body>
      <gui-table-footer>
        <gui-table-pagination-list classname="h-full grid-cols-12 lg:h-[45px] flex justify-between">
          <gui-table-pagination-list-item classname="max-lg:col-span-12">
            <gui-table-pagination-list-button
              as="previous"
              disabled="true"
            >
              Previous
            </gui-table-pagination-list-button>
          </gui-table-pagination-list-item>
          <gui-table-pagination-list-item>
            <gui-table-pagination-list-button
              as="number"
              active="true"
            >
              1
            </gui-table-pagination-list-button>
          </gui-table-pagination-list-item>
          <gui-table-pagination-list-item>
            <gui-table-pagination-list-button
              as="number"
              active="false"
            >
              2
            </gui-table-pagination-list-button>
          </gui-table-pagination-list-item>
          <gui-table-pagination-list-item>
            <gui-table-pagination-list-button
              as="number"
              active="false"
            >
              3
            </gui-table-pagination-list-button>
          </gui-table-pagination-list-item>
          <gui-table-pagination-list-item>
            <gui-table-pagination-list-button
              as="number"
              active="false"
            >
              4
            </gui-table-pagination-list-button>
          </gui-table-pagination-list-item>
          <gui-table-pagination-list-item>
            <gui-table-pagination-list-button
              as="number"
              active="false"
            >
              5
            </gui-table-pagination-list-button>
          </gui-table-pagination-list-item>
          <gui-table-pagination-list-item classname="max-lg:col-span-12">
            <gui-table-pagination-list-button
              as="next"
              disabled="false"
            >
              Next
            </gui-table-pagination-list-button>
          </gui-table-pagination-list-item>
        </gui-table-pagination-list>
      </gui-table-footer>
    </gui-table>
    <div class="border-background-secondary max-lg:hidden flex flex-col">
      <div class="h-[108px]">
      </div>
      <div class="relative h-[46px] border-y">
        <gui-cross
          top="true"
          left="true"
        >
        </gui-cross>
        <gui-cross
          bottom="true"
          left="true"
        >
        </gui-cross>
      </div>
      <div class="grow">
      </div>
      <div class="relative h-[46px] border-y">
        <gui-cross
          top="true"
          left="true"
        >
        </gui-cross>
        <gui-cross
          bottom="true"
          left="true"
        >
        </gui-cross>
      </div>
    </div>
  </div>
</section>

`;

exports[`Results renders an empty state when there are no items 1`] = `

<section class="bg-background overflow-y-hidden">
  <div class="grid-cols-[1fr_4fr_1fr] border-t lg:grid">
    <div class="border-background-secondary max-lg:hidden flex flex-col">
      <div class="h-[108px]">
      </div>
      <div class="relative h-[46px] border-y">
        <gui-cross
          top="true"
          right="true"
        >
        </gui-cross>
        <gui-cross
          bottom="true"
          right="true"
        >
        </gui-cross>
      </div>
      <div class="grow">
      </div>
      <div class="relative h-[46px] border-y">
        <gui-cross
          top="true"
          right="true"
        >
        </gui-cross>
        <gui-cross
          bottom="true"
          right="true"
        >
        </gui-cross>
      </div>
    </div>
    <gui-table
      variant="list"
      classname="border-x border-t-0"
    >
      <gui-table-caption>
        No results
      </gui-table-caption>
      <gui-table-filter-list>
        <gui-table-filter-list-item>
          <gui-table-filter-list-button
            classname="capitalize"
            isactive="false"
            enablesorting="true"
            disabled="true"
          >
            <gui-list-icon>
            </gui-list-icon>
            alphabetical
          </gui-table-filter-list-button>
        </gui-table-filter-list-item>
        <gui-table-filter-list-item>
          <gui-table-filter-list-button
            classname="capitalize"
            isactive="false"
            enablesorting="true"
            disabled="true"
          >
            <gui-layers-icon>
            </gui-layers-icon>
            version
          </gui-table-filter-list-button>
        </gui-table-filter-list-item>
        <gui-table-filter-list-item>
          <gui-table-filter-list-button
            classname="capitalize"
            isactive="false"
            enablesorting="true"
            disabled="true"
          >
            <gui-send-to-back-icon>
            </gui-send-to-back-icon>
            dependency type
          </gui-table-filter-list-button>
        </gui-table-filter-list-item>
        <gui-table-filter-list-item>
          <gui-table-filter-list-button
            classname="capitalize"
            isactive="false"
            enablesorting="true"
            disabled="true"
          >
            <gui-gallery-vertical-end-icon>
            </gui-gallery-vertical-end-icon>
            dependents
          </gui-table-filter-list-button>
        </gui-table-filter-list-item>
        <gui-table-filter-list-item>
          <gui-table-filter-list-button
            classname="capitalize"
            isactive="false"
            enablesorting="true"
            disabled="true"
          >
            <gui-blocks-icon>
            </gui-blocks-icon>
            module type
          </gui-table-filter-list-button>
        </gui-table-filter-list-item>
      </gui-table-filter-list>
      <gui-table-body classname="min-h-[calc(100svh-64px-108px-46px-46px)]">
        <gui-empty classname="bg-background h-full w-full rounded">
          <gui-empty-header>
            <gui-empty-media variant="icon">
              <gui-package-search-icon>
              </gui-package-search-icon>
            </gui-empty-media>
            <gui-empty-title>
              No results found
            </gui-empty-title>
            <gui-empty-description>
              Your query didn't turn up any results.
            </gui-empty-description>
          </gui-empty-header>
          <gui-empty-content>
            <div class="flex items-center gap-2">
              <gui-button
                size="sm"
                disabled="true"
              >
                <gui-home-icon>
                </gui-home-icon>
                <span>
                  Project Root
                </span>
              </gui-button>
              <gui-button
                variant="outline"
                aschild="true"
                size="sm"
              >
                <gui-nav-link to="/help/selectors">
                  <gui-query-icon>
                  </gui-query-icon>
                  <span>
                    Available Selectors
                  </span>
                </gui-nav-link>
              </gui-button>
            </div>
          </gui-empty-content>
        </gui-empty>
      </gui-table-body>
      <gui-table-footer>
        <gui-table-pagination-list classname="h-full grid-cols-12 lg:h-[45px] flex justify-between">
          <gui-table-pagination-list-item classname="max-lg:col-span-12">
            <gui-table-pagination-list-button
              as="previous"
              disabled="true"
            >
              Previous
            </gui-table-pagination-list-button>
          </gui-table-pagination-list-item>
          <gui-table-pagination-list-item classname="max-lg:col-span-12">
            <gui-table-pagination-list-button
              as="next"
              disabled="true"
            >
              Next
            </gui-table-pagination-list-button>
          </gui-table-pagination-list-item>
        </gui-table-pagination-list>
      </gui-table-footer>
    </gui-table>
    <div class="border-background-secondary max-lg:hidden flex flex-col">
      <div class="h-[108px]">
      </div>
      <div class="relative h-[46px] border-y">
        <gui-cross
          top="true"
          left="true"
        >
        </gui-cross>
        <gui-cross
          bottom="true"
          left="true"
        >
        </gui-cross>
      </div>
      <div class="grow">
      </div>
      <div class="relative h-[46px] border-y">
        <gui-cross
          top="true"
          left="true"
        >
        </gui-cross>
        <gui-cross
          bottom="true"
          left="true"
        >
        </gui-cross>
      </div>
    </div>
  </div>
</section>

`;
